--- a/src/main/resources/banking/transfer.fxml
+++ b/src/main/resources/banking/transfer.fxml
@@ -11,20 +11,31 @@
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
      </columnConstraints>
      <rowConstraints>
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
      </rowConstraints>
+      <children>
+         <Label fx:id="transferLabel" alignment="TOP_CENTER" textAlignment="CENTER" textFill="#666155" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.rowSpan="2147483647" GridPane.valignment="BOTTOM">
+            <font>
+               <Font name="Franklin Gothic Medium" size="20.0" />
+            </font>
+            <padding>
+               <Insets bottom="50.0" />
+            </padding>
+         </Label>
+      </children>
    </GridPane>
 
-        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="975.0" layoutY="409.0" lineSpacing="2.0" prefHeight="92.0" prefWidth="213.0" text="How much money you &#10;mant to transfer?" textAlignment="CENTER">
+        <Label alignment="CENTER" contentDisplay="CENTER" layoutX="975.0" layoutY="348.0" lineSpacing="2.0" prefHeight="153.0" prefWidth="354.0" text="How much money you &#10;mant to transfer?" textAlignment="CENTER" textFill="#666155">
             <font>
-                <Font name="Franklin Gothic Medium" size="20.0" />
+                <Font name="Franklin Gothic Medium" size="35.0" />
             </font>
         </Label>
-        <TextField fx:id="transferAmount" layoutX="998.0" layoutY="545.0" prefHeight="32.0" prefWidth="168.0" promptText="\$">
+        <TextField fx:id="transferAmount" layoutX="998.0" layoutY="545.0" prefHeight="64.0" prefWidth="287.0" promptText="\$">
             <font>
                 <Font name="Franklin Gothic Medium" size="18.0" />
             </font>
@@ -36,9 +47,9 @@
             </ImageView>
         </graphic>
     </Button>
-        <ScrollPane layoutX="695.0" layoutY="409.0" prefHeight="201.0" prefWidth="213.0" style="-fx-background-color: #eeeeee;">
+        <ScrollPane layoutX="520.0" layoutY="327.0" prefHeight="366.0" prefWidth="388.0" style="-fx-background-color: #eeeeee;" translateX="15.0">
             <content>
-                <VBox fx:id="vBox" prefHeight="341.0" prefWidth="208.0" style="-fx-background-color: #eeeeee;" />
+                <VBox fx:id="vBox" prefHeight="366.0" prefWidth="387.0" style="-fx-background-color: #eeeeee;" />
             </content>
         </ScrollPane>
 
